fix graph responsiveness on mobile view

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ h2 {
 
 .day {
     height: 100%;
+    width: 10%;
 
     color: hsl(28, 10%, 53%);
     text-align: center;
